# BigInt

./: CMakeLists.txt  README.md  bigint.cpp
include/: bigint.hpp
tests/: CMakeLists.txt  main.cpp  test_bigint.cpp  test_bigint.hpp
